--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "estraverse": "^4.1.0",
     "estraverse-fb": "^1.3.1",
     "globals": "^8.5.0",
+    "globby": "^2.1.0",
     "inquirer": "^0.9.0",
     "is-my-json-valid": "^2.10.0",
     "is-resolvable": "^1.0.0",
